added monthly consumption for prepaid
