# src/Dtos/customerBill.ts
@@ -12,3 +12,25 @@ export interface ICustomerBill {
   detailUrl?: string;
   consumerNo?: string;
 }
+
+export interface ICustomerInfo {
+  name?: string;
+  careOf?: string;
+  consumerNo?: string;
+  type?: string;
+  address?: string;
+  mobile?: string;
+  concernOffice?: string;
+  feederName?: string;
+  meterNo?: string;
+  meterType?: string;
+  meterStatus?: string;
+  loadKw?: number;
+  tariff?: string;
+  balance?: number;
+}
+
+export interface ICustomerBillResponse {
+  customerInfo: ICustomerInfo;
+  bills: ICustomerBill[];
+}
