# src/controllers/customersController.ts
@@ -1,7 +1,7 @@
 import { Controller, Get, Path, Route, Tags } from 'tsoa';
-import { ICustomerBill } from '../Dtos/customerBill';
+import { ICustomerBillResponse } from '../Dtos/customerBill';
 import { CustomerService } from '../services/customerService';
-import { IRechargeHistory } from '../Dtos/rechargeHistory';
+import { IMonthlyConsumptionResponse, IRechargeHistoryResponse } from '../Dtos/rechargeHistory';
 
 const defaultCustomerService = new CustomerService();
 
@@ -13,11 +13,14 @@ export class CustomersController extends Controller {
         super();
     }
 
+    /**
+     * Get monthly bills of postpaid customers
+     */
     @Get('{customerCode}/bills')
     public async getCustomerBills(
         @Path() customerCode: string
-    ): Promise<ICustomerBill[]> {
-        const bills = await this.customerService.getPostpaidCustomerBills(customerCode);
+    ): Promise<ICustomerBillResponse> {
+        const bills = await this.customerService.getPostpaidCustomerBills(customerCode.trim());
         if (!bills) {
             this.setStatus(404);
             throw new Error('Customer bills not found');
@@ -25,15 +28,33 @@ export class CustomersController extends Controller {
         return bills;
     }
 
-     @Get('{customerCode}/recharge-histories')
+    /**
+     * Get recharge histories of prepaid customers
+     */
+    @Get('{customerCode}/recharge-histories')
     public async getCustomerRechargeHistories(
         @Path() customerCode: string
-    ): Promise<IRechargeHistory[]> {
-        const rechargeHistories = await this.customerService.getPrepaidCustomerRechargeHistories(customerCode);
+    ): Promise<IRechargeHistoryResponse> {
+        const rechargeHistories = await this.customerService.getPrepaidCustomerRechargeHistories(customerCode.trim());
         if (!rechargeHistories) {
             this.setStatus(404);
             throw new Error('Customer recharge histories not found');
         }
         return rechargeHistories;
+    }
+
+    /**
+     * Get monthly consumption data of prepaid customers
+     */
+    @Get('{customerCode}/monthly-consumption')
+    public async getCustomerMonthlyConsumption(
+        @Path() customerCode: string
+    ): Promise<IMonthlyConsumptionResponse> {
+        const monthlyConsumptions = await this.customerService.getPrepaidCustomerMonthlyConsumption(customerCode.trim());
+        if (!monthlyConsumptions) {
+            this.setStatus(404);
+            throw new Error('Customer monthly consumption data not found');
+        }
+        return monthlyConsumptions;
     }
 }
